<resources>
    <string name="app_name">superheros</string>
    <string name="appearance">Appearance</string>
    <string name="powerstats">Powerstats</string>
    <string name="work">Work</string>
    <string name="connections">Connections</string>
    <string name="biography">Biography</string>
    <string name="alignment">Alignment : </string>
    <string name="publisher">Publisher : </string>
    <string name="first_appearance">First Appearance : </string>
    <string name="place_of_birth">Place of Birth : </string>
    <string name="aliases">Aliases : </string>
    <string name="alter_egos">Alter Egos : </string>
    <string name="full_name">Full Name : </string>
    <string name="gender">gender : </string>
    <string name="race">Race : </string>
    <string name="height">Height : </string>
    <string name="weight">Weight : </string>
    <string name="eye_colour">Eye Colour : </string>
    <string name="hair_colour">Hair Colour : </string>
    <string name="intelligence">Intelligence : </string>
    <string name="strength">Strength : </string>
    <string name="speed">Speed : </string>
    <string name="durability">Durability : </string>
    <string name="power">Power : </string>
    <string name="combat">Combat : </string>
    <string name="base">Base : </string>
    <string name="occupation">Occupation : </string>
    <string name="group_affiliation">Group Affiliation : </string>
    <string name="relations">Relations : </string>
</resources>
