<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.example.superheros.model.SuperHero" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding_X2"
        android:background="@color/colorPrimaryDark"
        tools:showIn="@layout/activity_details">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/powerstats"
            android:textSize="@dimen/medium_size"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intelligence"
            android:textSize="@dimen/medium_size"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/intelligence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.powerstats.intelligence}"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strength"
            android:textSize="@dimen/medium_size"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/strength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.powerstats.strength}"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:textSize="@dimen/medium_size"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.powerstats.speed}"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/durability"
            android:textSize="@dimen/medium_size"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/durability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.powerstats.durability}"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/power"
            android:textSize="@dimen/medium_size"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.powerstats.power}"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/combat"
            android:textSize="@dimen/medium_size"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/combat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.powerstats.combat}"
            android:textColor="@color/white"/>
    </LinearLayout>
    </LinearLayout>
</layout>