<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.example.superheros.model.SuperHero" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/default_padding_X2"
        tools:showIn="@layout/activity_details">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_padding"
            android:text="@string/appearance"
            android:textSize="@dimen/medium_size"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="@dimen/medium_size"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.appearance.gender}"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/race"
            android:textSize="@dimen/medium_size"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/race"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.appearance.race}"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textSize="@dimen/medium_size"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.appearance.height.toString()}"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="@dimen/medium_size"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.appearance.weight.toString()}"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eye_colour"
            android:textSize="@dimen/medium_size"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/eyeColour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.appearance.eyeColor}"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hair_colour"
            android:textSize="@dimen/medium_size"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/hairColour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.appearance.hairColor}"
            android:textColor="@color/white"/>
    </LinearLayout>

    </LinearLayout>
</layout>

            