<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.example.superheros.model.SuperHero" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding_X2"
        android:background="@color/colorPrimaryDark"
        tools:showIn="@layout/activity_details">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_padding"
            android:text="@string/biography"
            android:textSize="@dimen/medium_size"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium_size"
                android:text="@string/full_name"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/fullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{model.biography.fullName}"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alter_egos"
                android:textSize="@dimen/medium_size"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/alterEgos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{model.biography.alterEgos}"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aliases"
                android:textSize="@dimen/medium_size"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/aliases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{model.biography.aliases.toString()}"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_of_birth"
                android:textSize="@dimen/medium_size"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/placeOfBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{model.biography.placeOfBirth}"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_appearance"
                android:textSize="@dimen/medium_size"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/firstAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{model.biography.firstAppearance}"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publisher"
                android:textSize="@dimen/medium_size"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{model.biography.publisher}"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alignment"
                android:textSize="@dimen/medium_size"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/alignment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{model.biography.alignment}"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</layout>