<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.example.superheros.model.SuperHero" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding_X2"
        android:background="@color/colorPrimaryDark"
        tools:showIn="@layout/activity_details">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_padding"
            android:text="@string/work"
            android:textSize="@dimen/medium_size"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/occupation"
                android:textSize="@dimen/medium_size"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/occupation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{model.work.occupation}"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/base"
                android:textSize="@dimen/medium_size"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/base"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{model.work.base}"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>
</layout>